# open-uptime-bot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Rocket.toml  SETUP.md  diesel.toml  diesel_run.sh  docker-compose.yaml  flake.nix  recreate_db.sh  setup_local.sh
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: flake-checks.yml  lint.yml
cli/: Cargo.toml  package.nix
cli/src/: client.rs  commands.rs  format.rs  main.rs
clients/esp32/: Cargo.toml  build.rs  package.nix
clients/esp32/.cargo/: config.toml
clients/esp32/src/: main.rs
clients/pico-w/: Cargo.toml  README.md  blink.py  build.rs  package.nix
clients/pico-w/.cargo/: config.toml
clients/pico-w/firmware/: README.md
clients/pico-w/src/: main.rs
docs/: SETUP.md  USAGE.md  esp32-security-metrics-spec.md
docs/specs/: esp32-security-metrics.md
docs/usage/: esp32-c3.md  pico-w.md
locales/en/: main.ftl
locales/uk/: main.ftl
migrations/2024-11-01-154930_create_uptime_states/: down.sql  up.sql
migrations/2026-01-13-000000_add_state_changed_at/: down.sql  up.sql
migrations/2026-03-19-000000_add_language_drop_telegram/: down.sql  up.sql
migrations/2026-03-23-000000_maintenance_window_and_pause/: down.sql  up.sql
src/: actions.rs  api.rs  background.rs  bauth.rs  context.rs  db.rs  main.rs  notifications.rs  ntfy.rs  prom.rs  schema.rs  tg.rs
src/api/: admin.rs  core.rs  mod.rs  user.rs
src/db/: mod.rs  models.rs
tests/: api-v1-up-duration-message.nix  api-v1-up-duration-message.py  api-v1-up-test-success.nix  api-v1-up-test-success.py  cli-admin.nix  cli-admin.sh  cli-lifecycle.nix  cli-lifecycle.sh  cli-settings.nix  cli-settings.sh  docker-e2e.nix  security-auth.nix  test.py
tests/lib/: config.nix  infra.nix  lib.nix  ntfy-bootstrap.nix  primary.nix  services.nix  testbase.py
