cargo-features = ["edition2024"]

[package]
name = "open-uptime-bot"
version = "0.1.0"
edition = "2024"

# I have no clue what any of this does:
[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rocket_db_pools = { version = "0.2.0", features = ["diesel_postgres"] }
diesel = { version = "2.1.6", features = ["postgres", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
prometheus = { version = "0.13.4", features = ["nightly"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
reqwest = { version = "0.12.9", features = ["json"] }
grammers-client = { version = "0.7.0", features = ["html"] }
grammers-tl-types = "0.7.0"
fluent-templates = "0.11.0"
lazy_static = "1.5.0"
unic-langid = "0.9.5"
async-std = "1.13.0"
fluent = "0.16.1"
dotenv = "0.15.0"
chbs = "0.1.1"
rand = "0.8.5"
governor = "0.7.0"
dashmap = "6.1.0"
