[package]
name = "esp32-uptime-client"
version = "2026.3.21"
edition = "2024"

[dependencies]
embassy-executor = "0.9.0"
embassy-net = { version = "0.7.0", features = ["dhcpv4", "dns", "medium-ethernet", "tcp"] }
embassy-time = "0.5.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = ["esp32c3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-hal = { version = "1.0.0", features = ["esp32c3", "log-04", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04", "timestamp"] }
esp-radio = { version = "0.17.0", features = ["esp32c3", "esp-alloc", "log-04", "smoltcp", "unstable", "wifi"] }
esp-rtos = { version = "0.2.0", features = ["esp32c3", "esp-alloc", "esp-radio", "embassy", "log-04"] }
heapless = "0.8"
log = { version = "0.4", default-features = false }
reqwless = { version = "0.13.0", default-features = false, features = ["embedded-tls"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet", "proto-dhcpv4", "proto-dns", "proto-ipv4",
    "socket-dns", "socket-tcp",
] }
static_cell = "2.1.0"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
